fix link issues

--- a/index.css
+++ b/index.css
@@ -19,6 +19,10 @@ h1 {
 a {
     color: white;
 }
+a:hover {
+    color: burlywood;
+    font-weight: bold;
+}
 body > img {
     width: 45rem;
     height: 30rem;
@@ -27,4 +31,9 @@ body > img {
 a#choice {
     text-decoration: none;
     font-style: italic;
+    font-weight: bold;
+}
+
+a#choice:hover {
+    color: burlywood;
 }
