--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ a:hover {
     color: burlywood;
     font-weight: bold;
 }
-body > img {
+img {
     width: 45rem;
     height: 30rem;
 }
@@ -57,4 +57,23 @@ div:hover p{
     100%{
       transform: translateX(0px);
     }
+  }
+
+  div img {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+   
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+  
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+   
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
